fixed vertical alignment

--- a/client/src/app/user/task/location/location.component.css
+++ b/client/src/app/user/task/location/location.component.css
@@ -38,6 +38,7 @@
 }
 
 .jumbotron {
+  margin-top: 5%;
   background-color: white;
 }
 
